# docs/swagger.json
@@ -8,6 +8,27 @@
     },
     "host": "localhost:1323",
     "paths": {
+        "/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ping"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ようこそ、美しい世界へ",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/refresh-token": {
             "get": {
                 "security": [
@@ -24,7 +45,6 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "To do refresh token",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -52,7 +72,6 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Sign in a user",
                 "parameters": [
                     {
                         "description": "json req body",
@@ -91,7 +110,6 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Sign out a user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -119,7 +137,47 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Sign Up a user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
